# DinosaurGame

./: .gitignore  CMakeLists.txt  README.md
include/: commands.h  commandsFunctionality.h  keyboardForGroup.h  tables.h  tipCommands.h  utils.h
src/: commandsFunctionality.cpp  initialization.cpp  main.cpp  tipCommands.cpp  utils.cpp
